objects/CaseTypePriority__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>CaseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>CaseTypePriority</label>
</CustomObject>